# pixel-uecaps-toolbox

./: CITATION.cff  Cargo.toml  NOTICE  README.md  build.rs
proto/: ue_caps.proto
src/: factor.rs  lib.rs  main.rs  model.rs  proto.rs  provision.rs
src/magisk/: mod.rs
src/magisk/assets/: update-binary
src/mapping/: edit.rs  error.rs  mod.rs  plmn.rs  schema.rs
src/patch/: build.rs  filter.rs  format.rs  lte.rs  mod.rs  show.rs
src/report/: check.rs  combos.rs  compare.rs  inspect.rs  lte.rs  matrix.rs  mod.rs  selftest.rs
tests/: lib_api.rs
