[package]
name = "pixel-uecaps-toolbox"
version = "1.0.0"
edition = "2024"
description = "Decode and validate Google Pixel UE-capabilities (.binarypb) files"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
license = "Apache-2.0"
categories = ["command-line-utilities"]
keywords = ["pixel", "android", "protobuf", "uecaps", "modem"]

[dependencies]
thiserror = "2"
prost = "0.14"
num-prime = "0.5"
num-integer = "0.1"
clap = { version = "4", features = ["derive"] }
csv = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "1"
zip = { version = "8", default-features = false, features = ["deflate"] }
pixel-bands = { git = "https://github.com/vorot93/pixel-bands" }

[build-dependencies]
prost-build = "0.14"
protox = "0.9"
